# eVTOL-Pwr-Sim

./: .gitignore  CMakeLists.txt  README.md  appresources.qrc  evtolpwrsim.cpp  evtolpwrsim.h  evtolpwrsim.pro  evtolpwrsim.ui  evtolvehicle.cpp  evtolvehicle.h  main.cpp  vehicle.h
tests/: tests.pro  tst_evtoltests.cpp
